fixed the issue added to center

--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@
 body {
   background-color: black;
 }
+#a,#b,#c,#d,#e,#f,#g{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
