--- a/style.css
+++ b/style.css
@@ -59,3 +59,8 @@ body {
   align-items: center;
 }
 
+.styleClass {
+  transform: scale(1.2) translateY(10px);
+  z-index: 1;
+  border: 3px solid grey;
+}
