--- a/style.css
+++ b/style.css
@@ -1,51 +1,120 @@
 #a {
-  background-color: white;
+  background-color:#b90214;
   height: 200px;
-  border-right: 16px solid black;
-  border-bottom: 16px solid black;
+  width:300px;
+  border-color:black;
+  border-width: 0px 5px 5px 0px;
+border-style: solid;
+
+
+}
+#a:hover{
+ 
+ background: -webkit-linear-gradient(#e9a0a7,#d84d5a,#d6182a,#970614);
+ cursor :pointer;
+ border:0 solid;
+ transform:translate(-12px,-10px);
+ transition: transform 400ms;
 }
 #b {
-  background-color: white;
-  height: 200px;
-  border-right: 16px solid black;
-  border-bottom: 16px solid black;
-  border-top: 14px solid black;
+    border-width: 5px 5px 5px 0px;
+    border-style: solid;
+    border-color:black;
+    background-color:#0963c5;
+    height: 200px;
+  
+}
+#b:hover{
+background: -webkit-linear-gradient(#a5c5e8,#61a1e8,#105c99,#0a1a74);
+border:0 solid;
+transform: translate(-10px,0px);
+transition: transform 400ms;
+
 }
 
 #c {
-  background-color: red;
+  background-color: #145323;
   height: 400px;
-  border-bottom: 16px solid black;
+  border-width:0px 0px 5px 5px;
+ border-style: solid;
+  border-color:black;
 }
-
+#c:hover{
+background: -webkit-linear-gradient(#c5e89e,#96dd44,#57950f,#145323);
+  border:0 solid;
+  transform: translate(12px,-10px);
+  transition: transform 400ms;
+  }
+  
 #d {
-  background-color: #2d8cda;
+  background-color: #440ba0;
   height: 200px;
-  border-right: 16px solid black;
+  border-width:5px 5px 0px 0px;
+  border-style:solid;
+  border-color:black;
+}
+#d:hover{
+
+ background: -webkit-linear-gradient(#bca3e4,#9e73e2,#7b42d6,#440ba0);
+ cursor :pointer;
+ border:0 solid;
+ transform: translate(-12px,10px);
+ transition: transform 400ms;
 }
 
 #e {
-  background-color: white;
-  border-right: 16px solid black;
+  background-color: #e6d539;
+  border-width:5px 5px 0px 5px;
+  border-style:solid;
+  border-color:black;
+}
+#e:hover{
+
+ background: -webkit-linear-gradient(#e8e1a0,#e8dc6e,#e6d539,#d2be06);
+ cursor :pointer;
+ border:0 solid;
+ transform: translate(0px,12px);
+ transition: transform 400ms;
 }
 
 #f {
-  background-color: white;
+  background-color: #c920c9;
   height: 100px;
-  border-bottom: 14px solid black;
+   border-width:5px 0px 5px 5px;
+  border-style:solid;
+  border-color:black;
+}
+#f:hover{
+  border: 0 solid;
+ background: -webkit-linear-gradient(#f0aff0,#e874e8,#c920c9,#c920c9);
+ cursor :pointer;
+ border:0 solid;
+ transform: translate(12px,0px);
+ transition: transform 400ms;
 }
 
 #g {
-  background-color: yellow;
+  background-color: #ec8f0d;
   height: 100px;
-  border-top: 14px solid black;
+  border-width:5px 0px 0px 5px;
+border-style:solid;
+border-color:black;
+}
+#g:hover{
+   border:0 solid;
+
+ background:  -webkit-linear-gradient(#e6c391,#eab468,#f2a73e,#ec8f0d);
+ cursor :pointer;
+ border:0 solid;
+ transform: translate(12px,12px);
+ transition: transform 400ms;
 }
 
 .container {
   position: absolute;
   top: 6%;
   left: 25%;
-  border: 12px solid white;
+  border: 12px solid black;
   height: 620px;
   width: 780px;
 }
